--- a/css/style.css
+++ b/css/style.css
@@ -90,14 +90,19 @@ a:active {
   color: var(--secondary-color);
 }
 /* Header Image */
-#hero-area {
+#header-image {
   position: relative;
 }
-#hero-area:before {
+#header-image > img {
+  width: 100%;
+  height: 700px;
+  object-fit: cover;
+}
+#header-image:before {
   content: "";
   position: absolute;
-  right: 0;
   left: 0;
+  right: 0;
   bottom: 0;
   top: 0;
   width: 100%;
@@ -123,10 +128,16 @@ nav .block .navbar-default {
   background: none;
 }
 nav .block .navbar-default .navbar-brand {
-  padding-left: 0px;
+  padding: 0px;
+  width: 100%;
+  height: 100px;
+}
+nav .block .navbar-default .navbar-brand > img {
+  width: 100%;
+  height: 100%;
 }
 nav .block .navbar-default .navbar-nav {
-  padding-top: 10px;
+  padding-top: 40px;
 }
 nav .block .navbar-default .navbar-nav > li > a {
   color: var(--dark);
@@ -203,7 +214,9 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
 #slider .block .owl-carousel img {
   padding-right: 30px;
   border-radius: 2px;
-  padding-bottom: 50px;
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
 }
 #slider .block .owl-carousel .owl-pagination .active {
   background: var(--secondary-color);
@@ -226,7 +239,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
 /* about us  */
 #about-us {
   padding: 100px 0px;
-  background: #f6f6f6;
+  background: var(--white);
 }
 #about-us .block {
   text-align: center;
@@ -236,6 +249,11 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   font-size: 16px;
   line-height: 26px;
   padding: 40px 0px;
+}
+#about-us .block img {
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
 }
 /* Blog */
 
@@ -300,10 +318,12 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
   width: 50%;
   float: right;
   overflow: hidden;
+  height: 100%;
 }
 #blog .block ul li .blog-img-2 img {
   transition: all 0.8s ease-out;
   width: 100%;
+  height: 100%;
 }
 #blog .block ul li .content-right {
   padding: 40px 35px 23px;
@@ -430,7 +450,7 @@ nav .block .navbar-default .navbar-nav > .active > a:hover:before {
 #subscribe {
   padding: 100px 0px;
   text-align: center;
-  background: url(../images/subscribe-bg.jpg);
+  background: url(../images/contact-bg.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
