--- a/css/responsive.css
+++ b/css/responsive.css
@@ -118,6 +118,12 @@
   /*--
          General
   --*/
+
+  nav .block .navbar-default .navbar-brand > img {
+    padding: 0px;
+    width: 100%;
+    height: 100%;
+  }
   .heading {
     text-align: center;
     font-size: 22px;
@@ -138,6 +144,7 @@
   /*--
       nav
   --*/
+
   nav {
     position: relative;
   }
